--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,12 @@
 # FastAPI: Modern, fast web framework for building APIs
 # Uvicorn: ASGI server to run FastAPI
 # Pydantic: Data validation and settings management
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-pydantic[email]==2.5.0
-pydantic-settings==2.1.0
-email-validator==2.1.0
+fastapi>=0.104.1
+uvicorn[standard]>=0.24.0
+pydantic>=2.9.0
+pydantic[email]>=2.9.0
+pydantic-settings>=2.1.0
+email-validator>=2.1.0
 
 # Google Cloud Services
 # ---------------------
