--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ email-validator>=2.1.0
 # Firestore: NoSQL database for storing users, messages, etc.
 # Auth libraries: For verifying Google OAuth tokens
 google-cloud-firestore==2.13.1
-google-auth==2.23.4
+google-auth
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
 
@@ -46,4 +46,4 @@ python-multipart==0.0.6
 # python-dotenv: Load environment variables from .env file
 # httpx: Modern HTTP client for async requests
 python-dotenv==1.0.0
-httpx==0.25.1
+httpx>=0.28.1
